--- a/src/App.css
+++ b/src/App.css
@@ -228,6 +228,107 @@
   color: var(---color-TrueWhite);
   transition-duration: 200ms;
 }
-
+.btn-edit-class {
+  /*Layout*/
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  padding: 0 0 4px 0;
+  z-index: 2;
+  /*Style*/
+  width: 100vw;
+  height: 60px;
+  background-color: #AA5D00;
+  border-radius: 30px 30px 0 0;
+  box-shadow: 0px -4px 9px 0px rgba(0, 0, 0, 0.25);
+  color: var(---color-white);
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 0.08em;
+  text-decoration: none;
+}
+.btn-done-icon {
+  height: 40px;
+  width: 40px;
+}
+.pdone {
+  height: fit-content;
+}
 
 /*Buttons*/
+/*Input*/
+input, textarea {
+  padding: 8px 12px;
+  border: solid 1px #050709;
+  border-radius: 1px;
+  box-shadow: inset 0px 2px 4px 0px rgba(5, 7, 9, 0.25);
+  font-size: large;
+  max-width: 80vw;
+  letter-spacing: 0.04em;
+}
+input:focus, textarea:focus {
+  padding: 4px 8px;
+  border: solid 1px #AA5D00;
+  border-radius: 1px;
+  box-shadow: 0px 0px 4px 2px rgba(5, 7, 9, 0.25);
+}
+/*Input*/
+/*Create Class*/
+.class-main-data {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 40px;
+}
+#classPhoto {
+  width: 80px;
+  height: 80px;
+  background-image: url('./assets/Add-Photo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  border-radius: 15px;
+
+}
+::-webkit-file-upload-button{
+  opacity: 0;
+}
+#classDate, #classTime {
+  width: 80px;
+}
+#classAddress {
+  width: 200px;
+}
+.class-summary {
+  gap: 24px;
+  letter-spacing: 0.04em;
+}
+textarea {
+  width: 200px;
+  height: 80px;
+  letter-spacing: 0.04em;
+  font-size: large;
+  color: #A4A4A4;
+}
+.class-checklist {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 24px;
+}
+.checklist {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 80vw;
+}
+#checklist1, #checklist2, #checklist3 {
+  width: 160px;
+}
